[package]
name = "validators"
version = "0.1.0"
description = "高性能检验单验证引擎"
authors = ["inintencunter <2911583893@qq.com>"]
edition = "2018"
repository = "https://github.com/initialencounter/validators"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
lazy_static = "1.5.0"
regex = "1.11.1"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
